# Python_tuto

./: Acceptable Password I.py  Between Markers.py  Correct Sentence.py  End Zeros.py  First Word.py  Multiply.py  Sum Numbers.py  The Most Frequent.py  pyproject.toml
.github/workflows/: doc.yml  main.yml  main2.yml
chekio/: Nearest Value.py  backward_string.py  count_digits.py  mult_two.py  pyproject.toml  replace_first.py
chekio/chekio/: All Upper I.py  Beginning Zeros.py  Easy Unpack.py  Is Even.py  Max Digit.py  Split Pairs.py
chekio_/: All the Same.py  Multiply.py  Remove All Before.py
source/: conf.py  index.rst
tests/: test_code.py
